# Weather-Wiz

./: .env  .env.example  BUSINESS_READY_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIXES.md  Dockerfile  README.md  VERCEL_DEPLOYMENT.md  affiliate_products.py  animation_test.html  app.py  app_vercel.py  auth.py  config.py  deploy.sh  docker-compose.yml  email_service.py  maintenance.py  models.py  monitoring.py  nginx.conf  outfit_3d_test.html  outfit_test.html  pyproject.toml  requirements.txt  security.py  test_app.py  test_dark_theme.html  theme_test.html  utils.py  vercel.json  voice_test.html  weather_service.py
api/: index.py
attached_assets/: Pasted--Weather-Clone-App-Product-Requirements-Document-PRD-Version-1-0-Platform-Replit-Main-Langu-1749567459425_1749567459429.txt
instance/: weather_wiz.db
static/css/: style.css
static/js/: app.js  outfit-suggestions.js  theme-toggle.js  voice-assistant.js  weather-animations.js
templates/: admin_dashboard.html  admin_products.html  base.html  city.html  forecast.html  index.html  map.html  outfit_2d.html  outfit_affiliate.html  outfit_preferences.html  search.html  test_voice.html
templates/auth/: login.html  profile.html  register.html
templates/errors/: 403.html  404.html  500.html
templates/legal/: privacy.html  terms.html
