[project]
name = "weather-wiz"
version = "1.0.0"
description = "Weather-based outfit recommendations with affiliate shopping"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-migrate>=4.0.5",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.1",
    "flask-mail>=0.9.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
    "python-dotenv>=1.0.0",
    "werkzeug>=3.0.0",
    "wtforms>=3.1.0",
    "email-validator>=2.2.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "sentry-sdk[flask]>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-flask>=1.3.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
