[project]
name = "weather-wiz"
version = "1.0.0"
description = "Weather-based outfit recommendations with affiliate shopping"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "requests>=2.32.4",
    "python-dotenv>=1.0.0",
    "werkzeug>=3.0.0",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
